--- a/service.yml
+++ b/service.yml
@@ -12,4 +12,4 @@ spec:
     targetPort: 80 # seria porta do serviço do conteirner no meu caso o ngnix roda na porta 80 por deafult
   selector:
     app: mybookdeploy
-  type: ClusterIP
+  type: ClusterIP  # tem mais dois tipos como o NodePort e LoadBalacer 
