--- a/mybd-secret.yml
+++ b/mybd-secret.yml
@@ -19,7 +19,7 @@ spec:
         image: postgres:15
         envFrom:
          - secretRef:
-            name: mysecret  # bome dado na criação da secret 
+            name: mysecret  # nome dado na criação da secret 
 
 
 # tipos de secret
